[KH] fix spacing issue on mobile

--- a/src/MyPunks/MyPunks.module.css
+++ b/src/MyPunks/MyPunks.module.css
@@ -14,5 +14,8 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 1em;
+  overflow: hidden;
   padding-bottom: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
